# generic_factory

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh
hello_contract/: Cargo.toml  build.sh
hello_contract/src/: lib.rs
res/: example_contract.wasm  generic_factory.wasm  hello_contract.wasm
src/: lib.rs
tests/: main.rs
